--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -5,7 +5,7 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i,800);
 @import url(https://fonts.googleapis.com/css?family=Space+Mono:400,700);
 
-$primary: #3C2DC2;
+$primary: rgb(45, 194, 107);
 $secondary: #fff;
 $danger: #953C20; 
 $success: #477F38;
