--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -1,6 +1,3 @@
-// @import url(https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i,800);
-// @import url(https://fonts.googleapis.com/css?family=Space+Mono:400,700);
-// @import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:200,300,400,500,600,700,900&amp;subset=latin-ext);
 
 $primary: rgb(49, 192, 13);
 $secondary: #fff;
@@ -8,7 +5,7 @@ $danger: #953C20;
 $success: #477F38;
 $warning: #DDB967;
 $info: #8283E4;
-$light: #F8F9FA;
+$light: rgb(255, 255, 255);
 $dark: #4810ef;
 
 $body-bg: $secondary;
@@ -24,12 +21,6 @@ body, html {
     height: 100%;
 }
 
-// .navbar {
-//     a {
-//         width: 36%;
-//     }
-// }
-
 .hero {
     background-position: center center;
     background-size: cover;
@@ -38,6 +29,11 @@ body, html {
 
 .not-found {
     height: 100%;
+    background: #212529;
+    h1 {
+        color: $light;
+        font-size: 5rem;
+    }
 }
 
 .footer {
